--- a/assets/theme/color.css
+++ b/assets/theme/color.css
@@ -9,4 +9,5 @@
   --e-global-color-divider: #0a2c0f1a;
   --e-global-color-darkdivider: #ffffff1a;
   --e-global-color-background: #faf6f1;
+  --e-global-color-gray: #e2e1da;
 }
