--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@import "tailwindcss";
 @import "@nuxt/ui";
 @import "../theme/breakpoints.css";
 @import "../theme/color.css";
@@ -9,11 +8,16 @@
   --font-lora: "Lora", sans-serif;
 }
 
-/* .container {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 15px;
-} */
+* {
+  font-family: var(--font-plus);
+}
+
+@media (min-width: 1500px) {
+  .container {
+    max-width: 80vw;
+  }
+}
+
 :root {
   --hover-text-color: black; /* Default */
   --hover-bg-color: black; /* Default */
