--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,15 +13,15 @@
   font-family: var(--font-plus);
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .container {
     width: 85vw;
   }
 }
 
 :root {
-  --hover-text-color: black; /* Default */
-  --hover-bg-color: black; /* Default */
+  --hover-text-color: black;
+  --hover-bg-color: black;
 }
 
 @keyframes spin-svg {
