--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,11 +15,12 @@
 
 .container {
   width: 100%;
+  margin: 0 auto;
 }
 
 @media (min-width: 1024px) {
   .container {
-    max-width: 85vw;
+    max-width: 1300px;
   }
 }
 
