--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,11 +16,13 @@
 .container {
   width: 100%;
   margin: 0 auto;
+  padding: 0 30px;
 }
 
 @media (min-width: 1024px) {
   .container {
     max-width: 1300px;
+    padding: 0 15px;
   }
 }
 
