--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,11 +17,11 @@
   width: 100%;
   margin: 0 auto;
   padding: 0 30px;
+  max-width: 1300px;
 }
 
-@media (min-width: 1024px) {
+@media (max-width: 1024px) {
   .container {
-    max-width: 1300px;
     padding: 0 15px;
   }
 }
